replace List<MultipartFile> with Flux<FilePart> filePartFlux.
integrationtest case for adddog not green yet.